# typstwriter

./: .gitignore  README.md  app.json  package-lock.json  package.json
android/: build.gradle  settings.gradle
android/app/: build.gradle  debug.keystore
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  TypstModule.cpp  TypstModule.h
android/app/src/main/java/com/typstwriter/: CompileResult.java  MainActivity.java  MainApplication.java
android/app/src/main/res/values/: strings.xml  styles.xml
src/: App.tsx
src/components/: Editor.tsx  Toolbar.tsx
src/constants/: index.ts
src/hooks/: useFileSystem.ts  useTypstCompiler.ts
src/types/: index.ts
typst-core/: Cargo.toml
typst-core/src/: lib.rs
