[package]
name = "typst-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
typst = "0.15"
typst-pdf = "0.15"
typst-html = "0.15"
typst-assets = { version = "0.15", features = ["fonts"] }
typst-layout = "0.15"
jni = "0.21"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
